Agregando auditoria al proyecto

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -9028,3 +9028,9 @@ a.text-dark:hover, a.text-dark:focus {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+
+
+/*Style of System*/
+.margen {
+  margin-top: 2%;    
+}
