--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -9079,3 +9079,32 @@ a.text-dark:hover, a.text-dark:focus {
   display: none;
 }
 
+.container-login-register {
+  padding-top: 10%;
+}
+.button-iniciar-sesion {
+      margin-left: 35.5%;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(152, 30, 50); 
+  border-radius: 7px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(152, 30, 50); 
+}
+
