--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -3881,6 +3881,7 @@ input[type="button"].btn-block {
   display: block;
   padding: 0.5rem 1rem;
   font-size: 22px;
+  font-weight: normal;
   background-color: #fafafa;
 
 }
@@ -9288,8 +9289,8 @@ a.text-dark:hover, a.text-dark:focus {
 /* Sidebar list */
 
 .row-view {
-  min-height: 70vh;
-  margin-top: 0.6rem;
+  min-height: 60vh;
+  margin-top: 4rem;
 }
 .card-title {
   font-size: 18px;
@@ -9298,6 +9299,7 @@ a.text-dark:hover, a.text-dark:focus {
 .td-table {
   text-align: center;
   vertical-align: middle;
+  font-weight: normal;
 }
 
 #accordion {
@@ -9314,14 +9316,16 @@ a.text-dark:hover, a.text-dark:focus {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 16px;
+  width: 18px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 4px #d6d9dc; 
-  border-radius: 7px;
-  width: 14px;
+  box-shadow: 0 0 4px #d6d9dc; 
+  background-color: #d6d9dc;
+  border-radius: 3px;
+  width: 16px;
+  position: absolute;
 }
 
 
@@ -9329,14 +9333,15 @@ a.text-dark:hover, a.text-dark:focus {
 
 ::-webkit-scrollbar-thumb {
   background: #d6d9dc; 
-  border-radius: 7px;
+  background-color: gray;
+  border-radius: 3px;
   width: 14px;
 }
 
 /* Handle on hover */
 
 ::-webkit-scrollbar-thumb:hover {
-  background: grey; 
+  background: #6a737c; 
   width:14px;
 }
 
