--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -9078,6 +9078,10 @@ a.text-dark:hover, a.text-dark:focus {
   display: inline-block;
 }
 
+.button-back{
+  margin-bottom: 3rem;
+}
+
 .button-back:hover {
   background-color: #989898 !important;
 }
