Constantes de url's y haciendo correcciones sugeridas por las profesores

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -9349,3 +9349,8 @@ a.text-dark:hover, a.text-dark:focus {
 .header-border{
   border-bottom: 4px solid #981E32;
 }
+
+.form-group.required .control-label:after {
+  content:" *";
+  color:red;
+}
