--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -3893,7 +3893,7 @@ input[type="button"].btn-block {
     background-color: #fafafa;
 }
 
-.nav-link:hover, .nav-link:focus {
+.nav-link:hover {
   text-decoration: none; 
     /*border:1px solid gray;  */
     border-style: hidden;
@@ -3901,6 +3901,13 @@ input[type="button"].btn-block {
     border-radius: 8px;
     background-color: #f2f2f2;
    }
+
+.nav-link:focus {
+  border-style: hidden;
+  border-width: 1px;
+  border-radius: 8px;
+     background-color: lightgray;
+}
 
 .nav-link.disabled {
   color: #6c757d;
