--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -3129,9 +3129,9 @@ input[type="button"].btn-block {
 }
 
 .dropdown-item:hover, .dropdown-item:focus {
-  color: #16181b;
+  /* color: #16181b; */
   text-decoration: none;
-  background-color: #f8f9fa;
+  /* background-color: #f8f9fa; */
 }
 
 .dropdown-item.active, .dropdown-item:active {
